Refactored project structure

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru-ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Why I shouldn't use JS for entire everything?</title>
+    <link rel="stylesheet" href="../styles/main.css" />
 </head>
 
 <body>
     <a href="../a_star/index.html">A*</a>
-    <a href="../genetic/">genetic</a>
+    <a href="../genetic/index.html">genetic</a>
 </body>
 
 </html>
