--- a/src/a_star/index.html
+++ b/src/a_star/index.html
@@ -10,8 +10,15 @@
 </head>
 
 <body>
+    <div class="header">
+        <a href="../a_star/index.html">A*</a>
+        <a href="../genetic/index.html">genetic</a>
+        <a href="../genetic/index.html">genetic</a>
+        <a href="../genetic/index.html">genetic</a>
+        <a href="../genetic/index.html">genetic</a>
+        <a href="../genetic/index.html">genetic</a>
+    </div>
     <div class="main">
-        <p id="main-title" class="title">A* - алгоритм для поиска маршрута.</p>
         <container class="main-input-container">
             <input type="number" class="input" id="main-input-pixel-size"
                 placeholder="Введите количество клеток"></input>
