--- a/src/main/index.html
+++ b/src/main/index.html
@@ -6,11 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Why I shouldn't use JS for entire everything?</title>
     <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="../styles/main_page.css">
 </head>
 
 <body>
-    <a href="../a_star/index.html">A*</a>
-    <a href="../genetic/index.html">genetic</a>
+    <div class="header">
+        <a href="../a_star/index.html">A*</a>
+        <a href="../genetic/index.html">genetic</a>
+        <a href="../genetic/index.html">genetic</a>
+        <a href="../genetic/index.html">genetic</a>
+        <a href="../genetic/index.html">genetic</a>
+        <a href="../genetic/index.html">genetic</a>
+    </div>
+    <div class="main-part">
+        <p class="main-part-p" id="p-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil at ipsum
+            quos omnis inventore dolores asperiores repellat voluptas beatae dolorem dolorum, eveniet mollitia molestias
+            alias facere deleniti minima quidem doloribus natus suscipit dicta quas. A nesciunt maxime quae error
+            commodi ex, dolor fugit nihil ducimus est fugiat possimus libero reiciendis ab natus, velit saepe
+            consectetur labore molestiae itaque? A modi ea, temporibus amet, facere optio officia non molestiae culpa,
+            unde voluptatem hic? Aut, explicabo veritatis. Voluptas quo aperiam eaque ullam blanditiis. Laudantium,
+            alias nemo recusandae pariatur officia quidem quaerat harum deserunt excepturi corporis provident odit
+            accusamus assumenda dolorum repellat.</p>
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.freecodecamp.org%2Fnews%2Fcontent%2Fimages%2F2019%2F07%2Fbest-js-meme-to-date-2.png&f=1&nofb=1&ipt=0d219af61db4e297370c3f6eb173f58d98261b4ec3d5b95fb14e1d9eddc6da1d&ipo=images"
+            alt="Что-то пошло не так">
+    </div>
 </body>
+
+<script id="main-script">
+    const script = document.getElementById("main-script");
+    const p = document.getElementById("p-text");
+    console.log(script.innerText);
+    p.innerText = script.innerHTML;
+    let pSplited = p.innerHTML.split("<br>");
+
+    setInterval(() => {
+        pSplited.push(pSplited[0]);
+        pSplited.splice(0, 1);
+        p.innerHTML = pSplited.join("<br>");
+    }, 1000 / 3);
+</script>
 
 </html>
