--- a/src/genetic/index.html
+++ b/src/genetic/index.html
@@ -15,7 +15,7 @@
         <a href="../genetic/index.html">genetic</a>
         <a href="../genetic/index.html">genetic</a>
         <a href="../genetic/index.html">genetic</a>
-        <a href="../genetic/index.html">genetic</a>
+        <a href="../decisionTree/index.html">Tree of decisions</a>
         <a href="../genetic/index.html">genetic</a>
     </div>
     <div class="main-part">
