--- a/src/genetic/index.html
+++ b/src/genetic/index.html
@@ -11,24 +11,24 @@
 
 <body>
     <div class="header">
-        <a href="../a_star/index.html">A*</a>
-        <a href="../genetic/index.html">genetic</a>
-        <a href="../genetic/index.html">genetic</a>
-        <a href="../genetic/index.html">genetic</a>
-        <a href="../decisionTree/index.html">Tree of decisions</a>
-        <a href="../genetic/index.html">genetic</a>
+        <a class="header-btn" href="../a_star/index.html">A*</a>
+        <a class="header-btn" href="../genetic/index.html">genetic</a>
+        <a class="header-btn" href="../genetic/index.html">genetic</a>
+        <a class="header-btn" href="../genetic/index.html">genetic</a>
+        <a class="header-btn" href="../decisionTree/index.html">Tree of decisions</a>
+        <a class="header-btn" href="../genetic/index.html">genetic</a>
     </div>
     <div class="main-part">
         <canvas class="main-canvas" id="main-canvas" width=800, height=800, style="background-color: white;">Похоже пора
             обновиться:)</canvas>
 
         <div class="stats">
-            <button class="main-button" id="start-btn">Начать поиск</button>
+            <button class="std-btn genetic-btn" id="start-btn">Начать поиск</button>
 
-            <input type="number" id="input1" placeholder="Размер популяции" />
-            <input type="number" id="input2" placeholder="Количество итераций" />
+            <input type="number" class="std-input genetic-input" id="input1" placeholder="Размер популяции" />
+            <input type="number" class="std-input genetic-input" id="input2" placeholder="Количество итераций" />
 
-            <p class="main-p" id="result">Результат</p>
+            <p class="result-p" id="result">Результат</p>
         </div>
     </div>
 </body>
