--- a/src/main/index.html
+++ b/src/main/index.html
@@ -12,11 +12,11 @@
 <body>
     <div class="header">
         <a href="../a_star/index.html">A*</a>
-        <a href="../genetic/index.html">genetic</a>
-        <a href="../genetic/index.html">genetic</a>
-        <a href="../genetic/index.html">genetic</a>
-        <a href="../decisionTree/index.html">Tree of decisions</a>
-        <a href="../genetic/index.html">genetic</a>
+        <a href="../clustering_bonus/index.html">Кластеризация</a>
+        <a href="../genetic/index.html">Генетический алгоритм</a>
+        <a href="../genetic/index.html">placeholder</a>
+        <a href="../decisionTree/index.html">Дерево решений</a>
+        <a href="../genetic/index.html">placeholder</a>
     </div>
     <div class="main-part">
         <p class="main-part-p" id="p-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil at ipsum
