--- a/src/genetic/index.html
+++ b/src/genetic/index.html
@@ -12,11 +12,11 @@
 <body>
     <div class="header">
         <a href="../a_star/index.html">A*</a>
-        <a href="../genetic/index.html">genetic</a>
-        <a href="../genetic/index.html">genetic</a>
-        <a href="../genetic/index.html">genetic</a>
-        <a href="../decisionTree/index.html">Tree of decisions</a>
-        <a href="../genetic/index.html">genetic</a>
+        <a href="../clustering_bonus/index.html">Кластеризация</a>
+        <a href="../genetic/index.html">Генетический алгоритм</a>
+        <a href="../genetic/index.html">placeholder</a>
+        <a href="../decisionTree/index.html">Дерево решений</a>
+        <a href="../genetic/index.html">placeholder</a>
     </div>
     <div class="main-part">
         <canvas class="main-canvas" id="main-canvas" width=800, height=800, style="background-color: white;">Похоже пора
