Integrate clustering into project and minor styles changes

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -11,12 +11,12 @@
 
 <body>
     <div class="header">
-        <a href="../a_star/index.html">A*</a>
-        <a href="../clustering_bonus/index.html">Кластеризация</a>
-        <a href="../genetic/index.html">Генетический алгоритм</a>
-        <a href="../genetic/index.html">placeholder</a>
-        <a href="../decisionTree/index.html">Дерево решений</a>
-        <a href="../genetic/index.html">placeholder</a>
+        <a class="header-btn" href="../a_star/index.html">A*</a>
+        <a class="header-btn" href="../clustering_bonus/index.html">Кластеризация</a>
+        <a class="header-btn" href="../genetic/index.html">Генетический алгоритм</a>
+        <a class="header-btn" href="../genetic/index.html">placeholder</a>
+        <a class="header-btn" href="../decisionTree/index.html">Дерево решений</a>
+        <a class="header-btn" href="../genetic/index.html">placeholder</a>
     </div>
     <div class="main-part">
         <p class="main-part-p" id="p-text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные
