--- a/src/clustering_bonus/index.html
+++ b/src/clustering_bonus/index.html
@@ -11,18 +11,20 @@
 
 <body>
     <div class="header">
-        <a href="../a_star/index.html">A*</a>
-        <a href="../clustering_bonus/index.html">Кластеризация</a>
-        <a href="../genetic/index.html">Генетический алгоритм</a>
-        <a href="../genetic/index.html">placeholder</a>
-        <a href="../decisionTree/index.html">Дерево решений</a>
-        <a href="../genetic/index.html">placeholder</a>
+        <a class="header-btn" href="../a_star/index.html">A*</a>
+        <a class="header-btn" href="../clustering_bonus/index.html">Кластеризация</a>
+        <a class="header-btn" href="../genetic/index.html">Генетический алгоритм</a>
+        <a class="header-btn" href="../genetic/index.html">placeholder</a>
+        <a class="header-btn" href="../decisionTree/index.html">Дерево решений</a>
+        <a class="header-btn" href="../genetic/index.html">placeholder</a>
     </div>
     <div class="main-part">
         <canvas id="canvas"></canvas>
-        <button class="std-btn" id="clusterButton">Запустить кластеризацию K-средних</button>
-        <input class="std-input" type="number" id="k-input" placeholder="K">
-        <button class="std-btn" id="button2">Установить K</button>
+        <div class="main-part-input-container">
+            <button class="std-btn" id="clusterButton">Запустить кластеризацию K-средних</button>
+            <input class="std-input" type="number" id="k-input" placeholder="K">
+            <button class="std-btn" id="button2">Установить K</button>
+        </div>
     </div>
 </body>
 <script src="script.js"></script>
