--- a/src/a_star/index.html
+++ b/src/a_star/index.html
@@ -14,7 +14,7 @@
         <a class="header-btn" href="../a_star/index.html">A*</a>
         <a class="header-btn" href="../clustering_bonus/index.html">Кластеризация</a>
         <a class="header-btn" href="../genetic/index.html">Генетический алгоритм</a>
-        <a class="header-btn" href="../genetic/index.html">placeholder</a>
+        <a class="header-btn" href="../ant - shaped_base/index.html">Муравьиный</a>
         <a class="header-btn" href="../decisionTree/index.html">Дерево решений</a>
         <a class="header-btn" href="../genetic/index.html">placeholder</a>
     </div>
