Add clear buttons, write new algorithm for "genetic", change styles to new color pallet.

--- a/src/a_star/index.html
+++ b/src/a_star/index.html
@@ -30,6 +30,7 @@
             </select>
             <button class="std-btn a-star-btn" id="main-a-star-btn">Найти путь</button>
             <button class="std-btn a-star-btn" id="main-generate-maze-btn">Создать лабиринт</button>
+            <button class="std-btn a-star-btn" id="canvas-clear">Очистить</button>
         </container>
         <container class="main-canvas-container">
             <canvas id="main-canvas" class="canvas">
