--- a/src/clustering_bonus/index.html
+++ b/src/clustering_bonus/index.html
@@ -19,11 +19,12 @@
         <a class="header-btn" href="../genetic/index.html">placeholder</a>
     </div>
     <div class="main-part">
-        <canvas id="canvas"></canvas>
+        <canvas id="canvas">Похоже пора обновиться:)</canvas>
         <div class="main-part-input-container">
             <button class="std-btn" id="clusterButton">Запустить кластеризацию K-средних</button>
             <input class="std-input" type="number" id="k-input" placeholder="K">
             <button class="std-btn" id="button2">Установить K</button>
+            <button class="std-btn" id="clear-canvas">Очистить</button>
         </div>
     </div>
 </body>
