--- a/src/decisionTree/index.html
+++ b/src/decisionTree/index.html
@@ -31,7 +31,7 @@
             <p class="test-result" id="test-result">Здесь будет результат</p>
         </div>
 
-        <canvas id="decision-tree-canvas" class="canvas"></canvas>
+        <canvas id="decision-tree-canvas" class="canvas">Похоже пора обновиться:)</canvas>
     </div>
 </body>
 
