--- a/src/genetic/index.html
+++ b/src/genetic/index.html
@@ -19,7 +19,8 @@
         <a class="header-btn" href="../genetic/index.html">placeholder</a>
     </div>
     <div class="main-part">
-        <canvas class="main-canvas" id="main-canvas" width=800, height=800, style="background-color: white;">Похоже пора
+        <canvas class="main-canvas" id="main-canvas" width=800, height=800, style="background-color: #171723;">Похоже
+            пора
             обновиться:)</canvas>
 
         <div class="stats">
@@ -29,6 +30,7 @@
             <input type="number" class="std-input genetic-input" id="input2" placeholder="Количество итераций" />
 
             <p class="result-p" id="result">Результат</p>
+            <button class="std-btn genetic-btn" id="clear-btn">Очистить</button>
         </div>
     </div>
 </body>
