Кнопки очищения для других задач
Добавил кнопку удаления для Кластеризации и Муравьиного. Так же исправил ошибку в нейронке.

--- a/src/ant - shaped_base/index.html
+++ b/src/ant - shaped_base/index.html
@@ -20,6 +20,7 @@
 
         <div class="stats">
             <button class="std-btn genetic-btn" id="startButton">Запустить алгоритм</button>
+            <button class="std-btn" id="clearButton">Очистить</button>
         </div>
     </div>
     <script src="./script.js"></script>
