--- a/src/clustering_bonus/index.html
+++ b/src/clustering_bonus/index.html
@@ -24,6 +24,7 @@
             <button class="std-btn" id="clusterButton">Запустить кластеризацию K-средних</button>
             <input class="std-input" type="number" id="k-input" placeholder="K">
             <button class="std-btn" id="button2">Установить K</button>
+            <button class="std-btn" id="clearButton">Очистить</button>
         </div>
     </div>
 </body>
