--- a/src/neural_network/index.html
+++ b/src/neural_network/index.html
@@ -18,10 +18,10 @@
 
 
             td.active {
-                background-color: black;
+                background-color: rgb(18, 12, 12);
             }
 
-        #recognizeButton
+        #recognizeButton,
         #clearButton {
             font-size: 20px;
             padding: 10px 20px;
