--- a/src/a_star/index.html
+++ b/src/a_star/index.html
@@ -14,9 +14,9 @@
         <a class="header-btn" href="../a_star/index.html">A*</a>
         <a class="header-btn" href="../clustering_bonus/index.html">Кластеризация</a>
         <a class="header-btn" href="../genetic/index.html">Генетический алгоритм</a>
-        <a class="header-btn" href="../genetic/index.html">placeholder</a>
+        <a class="header-btn" href="../ant - shaped_base/index.html">Муравьиный алгоритм</a>
         <a class="header-btn" href="../decisionTree/index.html">Дерево решений</a>
-        <a class="header-btn" href="../genetic/index.html">placeholder</a>
+        <a class="header-btn" href="../neural_network/index.html">Нейронные сети</a>
     </div>
     <div class="main">
         <container class="main-input-container">
