--- a/src/ant - shaped_base/index.html
+++ b/src/ant - shaped_base/index.html
@@ -16,7 +16,7 @@
         <a class="header-btn" href="../neural_network/index.html">Нейронные сети</a>
     </div>
     <div class="main-part">
-        <canvas class="main-canvas" id="canvas" width="800" height="600" style="background-color: white;">Похоже, пора обновиться:)</canvas>
+        <canvas class="canvas" id="canvas" width="800" height="600";">Похоже, пора обновиться:)</canvas>
 
         <div class="stats">
             <button class="std-btn genetic-btn" id="startButton">Запустить алгоритм</button>
